#126, #87: switch to context driven navigation system